Made everything like in wsti-hgi

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -727,11 +727,11 @@ process{
     }
 
     withName: 'HAPLOTYPECALLER' {
-        ext.args         = { params.joint_germline ? "-ERC GVCF" : "" }
+        ext.args         = { params.joint_germline ? "-ERC GVCF -G StandardAnnotation -G AS_StandardAnnotation -G StandardHCAnnotation" : "" }
         ext.prefix       = { meta.num_intervals <= 1 ? ( params.joint_germline ? "${meta.id}.haplotypecaller.g" : "${meta.id}.haplotypecaller" ) : ( params.joint_germline ? "${meta.id}.haplotypecaller.${intervals.simpleName}.g" :"${meta.id}.haplotypecaller.${intervals.simpleName}" ) }
         ext.when         = { params.tools && params.tools.split(',').contains('haplotypecaller') }
         publishDir       = [
-            enabled: !params.joint_germline,
+            //enabled: !params.joint_germline,
             mode: params.publish_dir_mode,
             path: { "${params.outdir}/variant_calling/"},
             pattern: "*{vcf.gz,vcf.gz.tbi}",
@@ -762,6 +762,7 @@ process{
     }
 
     withName: 'GATK4_GENOTYPEGVCFS' {
+        ext.args         = { "-G StandardAnnotation -G AS_StandardAnnotation" }
         ext.prefix       = { meta.num_intervals > 1 ? meta.intervals_name : "joint_germline" }
     }
 
@@ -784,7 +785,7 @@ process{
 
     withName: 'VARIANTRECALIBRATOR_INDEL' {
         ext.prefix = { "${meta.id}_INDEL" }
-        ext.args = "-an QD -an MQRankSum -an ReadPosRankSum -an FS -an SOR -an DP  -mode INDEL"
+        ext.args = "-AS -an QD -an MQRankSum -an ReadPosRankSum -an FS -an SOR -an DP  -mode INDEL"
         publishDir = [
             enabled: false
         ]
@@ -792,9 +793,11 @@ process{
 
     withName: 'VARIANTRECALIBRATOR_SNP' {
         ext.prefix = { "${meta.id}_SNP" }
-        ext.args = "-an QD -an MQ -an MQRankSum -an ReadPosRankSum -an FS -an SOR -mode SNP"
+        ext.args = "-AS -an QD -an MQ -an MQRankSum -an ReadPosRankSum -an FS -an SOR -mode SNP"
         publishDir = [
-            enabled: false
+            mode: params.publish_dir_mode,
+            path: { "${params.outdir}/variant_calling/haplotypecaller/joint_variant_calling/"},
+            pattern: "*{R.pdf,R}"
         ]
     }
 
@@ -804,12 +807,8 @@ process{
     }
 
     withName: 'GATK4_APPLYVQSR_INDEL'{
-        ext.prefix    = { "${meta.id}_INDEL" }
+        ext.prefix    = { "joint_germline_recalibrated" }
         ext.args      = '--truth-sensitivity-filter-level 99.9 -mode INDEL'
-    }
-
-    withName: 'MERGE_VQSR' {
-        ext.prefix       = "joint_germline_recalibrated"
         publishDir       = [
             mode: params.publish_dir_mode,
             path: { "${params.outdir}/variant_calling/haplotypecaller/joint_variant_calling/"},
@@ -817,6 +816,16 @@ process{
             pattern: "*{vcf.gz,vcf.gz.tbi}"
         ]
     }
+
+//    withName: 'MERGE_VQSR' {
+//        ext.prefix       = "joint_germline_recalibrated"
+//        publishDir       = [
+//            mode: params.publish_dir_mode,
+//            path: { "${params.outdir}/variant_calling/haplotypecaller/joint_variant_calling/"},
+//            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+//            pattern: "*{vcf.gz,vcf.gz.tbi}"
+//        ]
+//    }
 
     // MANTA
     withName: 'MERGE_MANTA.*' {
