--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,7 @@ params {
 
     // Main options
     no_intervals           = false      // Intervals will be built from the fasta file
-    nucleotides_per_second = 1000       // Default interval size
+    nucleotides_per_second = 40000       // Default interval size
     tools                  = null       // No default Variant_Calling or Annotation tools
     skip_tools             = null      // All tools (markduplicates + baserecalibrator + QC) are used by default
     split_fastq            = 50000000   // FASTQ files will not be split by default by FASTP
@@ -65,7 +65,7 @@ params {
     cf_chrom_len                = null  // by default we are using the fasta_fai. This can be used to circumvent this issue until there is a better option available upstream: https://github.com/nf-core/sarek/issues/670
     ignore_soft_clipped_bases   = false // no --dont-use-soft-clipped-bases for GATK Mutect2
     wes                         = false // Set to true, if data is exome/targeted sequencing data. Used to use correct models in various variant callers
-    joint_germline              = false // g.vcf & joint germline calling are not run by default if HaplotypeCaller is selected
+    joint_germline              = true // g.vcf & joint germline calling are not run by default if HaplotypeCaller is selected
 
     // Annotation
     vep_out_format      = 'vcf'
