--- a/nextflow.config
+++ b/nextflow.config
@@ -290,7 +290,7 @@ singularity.registry = 'quay.io'
 // Nextflow plugins
 plugins {
     //id 'nf-validation' // Validation of pipeline parameters and creation of an input channel from a sample sheet
-    id 'nf-prov'       // Provenance reports for pipeline runs
+    //id 'nf-prov'       // Provenance reports for pipeline runs
 }
 
 // Load igenomes.config if required
